src/test/deca/syntax/invalid/custom/select_expr3.deca


{
bonjour test(1, 2, 3);
}